Use the main window as parent for the system problem dialog. After denying a problem in K3b for the bug I fixed it now.

BUG: 137404

svn path=/trunk/extragear/multimedia/k3b/; revision=605328